[package]
name = "todo-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
clap = { version = "4.0", features = ["cargo"] }
features = "0.10.0"
derive = "1.0.0"
colored = "2.2.0"
tabled = "0.17.0"
prettytable-rs = "0.10.0"
